--- a/index.html
+++ b/index.html
@@ -794,8 +794,8 @@
       responsiveClass: true,
       responsive: {
         0: {
-          items: 1,
-          nav: true
+          items: 2,
+          nav: true,
         },
         600: {
           items: 1,
