--- a/HTML/About.html
+++ b/HTML/About.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" /> 
+  <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
@@ -106,7 +106,7 @@
     <h2>About Us</h2>
     <div class="container col-md-12">
       <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6 cells">
           <h3>The Best Choice For Your Successful Business!</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
@@ -129,22 +129,22 @@
             </li>
           </ul>
         </div>
-        <div class="col col-md-6">
+        <div class="col col-md-6 cells">
           <img src="./../images/about/b5.jpg" alt="b5">
         </div>
       </div>
       <div class="row">
-        <div class="col col-sm-12 col-lg-4 col-12">
+        <div class="col col-sm-6 col-lg-4 col-12">
           <h4>Our History 1795</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="col col-sm-12 col-lg-4 col-12">
+        <div class="col col-sm-6 col-lg-4 col-12">
           <h4>The power of business</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="col col-sm-12 col-lg-4 col-12">
+        <div class="col col-sm-6 col-lg-4 col-12">
           <h4>120 Customer service</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
@@ -495,27 +495,29 @@
         <div class="col-md-6 col-sm-6 colume form-mail">
           <h5>Newsletter</h5>
           <div class="bg-6">
-            <h2>Get latest updates and offers.</h2>
-            <form class="row row-cols-lg-auto g-3 align-items-center">
-              <div class="col-8">
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Adress">
-              </div>
-              <div class="col-4">
-                <button type="submit" class="btn btn-primary btn-sumit">Go</button>
-              </div>
-              <p>Sign up for our latest news & articles. We won’t give you spam mails.</p>
-            </form>
+            <div class="fr-mail">
+              <h2>Get latest updates and offers.</h2>
+              <form class="row row-cols-lg-auto g-3 align-items-center">
+                <div class="col-8">
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Adress">
+                </div>
+                <div class="col-4">
+                  <button type="submit" class="btn btn-primary btn-sumit">Go</button>
+                </div>
+                <p>Sign up for our latest news & articles. We won’t give you spam mails.</p>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="container colume">
+    <div class="container colume col-bottom2">
       <div class="row">
-        <div class="col-sm-12 colume1 col-md-7">
+        <div class="col-sm-12 col-bottom col-md-7 ">
           <p>&copy 2020 Masterwork. All rights reserved | Designed by</p>
           <a href="#">W3Layouts</a>
         </div>
-        <div class="col-sm-12 col-md-5">
+        <div class="col-sm-12 col-bottom col-md-5">
           <div class="colume2 text-right">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
