--- a/HTML/Services.html
+++ b/HTML/Services.html
@@ -13,9 +13,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link />
 
-<!-- back to top -->
-<script>document.getElementsByTagName("html")[0].className += " js";</script>
-<link rel="stylesheet" href="./../back-to-top-master/assets/css/style.css">
+  <!-- back to top -->
+  <script>document.getElementsByTagName("html")[0].className += " js";</script>
+  <link rel="stylesheet" href="./../back-to-top-master/assets/css/style.css">
 
 
   <!-- GOOGLE FONTS -->
@@ -99,7 +99,7 @@
     <h2>Our Services</h2>
     <div class="container col-md-12">
       <div class="row col-sm-12">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6 col-top">
           <h3>Our Best Services</h3>
           <p>Fusce fringilla tincidunt laoreet volutpat cras varius sit. metus vitae diam mauris.</p>
           <span>Sed in metus libero. Sed volutpat eget dui ut tempus. Fusce fringilla tincidunt laoreet Morbi ac metus
@@ -107,7 +107,7 @@
             vulputate. Phasellus bibendum.</span><br>
           <a href="#" class="btn__demo btn-secondary my-2 py-3 btn__demo">LEAR MORE</a>
         </div>
-        <div class="col col-md-3 ">
+        <div class="col col-md-3 col-bottom">
           <div class="row col-xs-12 ">
             <a href="#"><img src="./../images/services/service-icon1.png" alt="icon"></a>
             <a href="#">Concept & Strategy</a>
@@ -119,7 +119,7 @@
             <span>Lorem ipsum dolor sit amet consectetur elit. Inventore, eius!</span>
           </div>
         </div>
-        <div class="col col-md-3">
+        <div class="col col-md-3 col-bottom">
           <div class="row">
             <a href="#"><img src="./../images/services/service-icon3.png" alt="icon"></a>
             <a href="#">Interactive Business</a>
@@ -286,91 +286,96 @@
           <div class="right">
             <img src="./../images/services/b2.jpg" alt="b1">
             <h3>Work better together</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur consequatur adipisicing elit.<br><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur
+              consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem
+              tenetur consequatur adipisicing elit.<br><br>
 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur consequatur adipisicing elit.</p>
-              <a href="#" class="btn__demo btn-secondary my-2 py-3 btn__demo">KNOW MORE</a>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur
+              consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem
+              tenetur consequatur adipisicing elit.</p>
+            <a href="#" class="btn__demo btn-secondary my-2 py-3 btn__demo">KNOW MORE</a>
           </div>
-        </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
-    <!-- footer -->
-    <footer class="bg-light">
-      <div class="container text-left div-contrainer">
-        <div class="row">
-          <div class="col-md-2 col-sm-12 colume">
-            <h5>Company</h5>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2 col-sm-12 colume">
-            <h5>Useful Links</h5>
-            <ul>
-              <li><a href="#">Case Studies</a></li>
-              <li><a href="#">Our Branches</a></li>
-              <li><a href="#">Latest Media</a></li>
-              <li><a href="#">About Company</a></li>
-              <li><a href="#">Our People</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2 col-sm-6 colume">
-            <h5>Our Services</h5>
-            <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Our Terms</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Landing Page</a></li>
-              <li><a href="#">Our People</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6 col-sm-6 colume form-mail">
-            <h5>Newsletter</h5>
-            <div class="bg-6">
-              <h2>Get latest updates and offers.</h2>
-              <form class="row row-cols-lg-auto g-3 align-items-center">
-                <div class="col-8">
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Adress">
-                </div>
-                <div class="col-4">
-                  <button type="submit" class="btn btn-primary btn-sumit">Go</button>
-                </div>
-                <p>Sign up for our latest news & articles. We won’t give you spam mails.</p>
-              </form>
-            </div>
+  <!-- footer -->
+  <footer class="bg-light">
+    <div class="container text-left div-contrainer">
+      <div class="row">
+        <div class="col-md-2 col-sm-12 colume">
+          <h5>Company</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 col-sm-12 colume">
+          <h5>Useful Links</h5>
+          <ul>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">Our Branches</a></li>
+            <li><a href="#">Latest Media</a></li>
+            <li><a href="#">About Company</a></li>
+            <li><a href="#">Our People</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 col-sm-6 colume">
+          <h5>Our Services</h5>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Our Terms</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Landing Page</a></li>
+            <li><a href="#">Our People</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 col-sm-6 colume form-mail">
+          <h5>Newsletter</h5>
+          <div class="bg-6">
+            <h2>Get latest updates and offers.</h2>
+            <form class="row row-cols-lg-auto g-3 align-items-center">
+              <div class="col-8">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Adress">
+              </div>
+              <div class="col-4">
+                <button type="submit" class="btn btn-primary btn-sumit">Go</button>
+              </div>
+              <p>Sign up for our latest news & articles. We won’t give you spam mails.</p>
+            </form>
           </div>
         </div>
       </div>
-      <div class="container colume">
-        <div class="row">
-          <div class="col-sm-12 colume1 col-md-7">
-            <p>&copy 2020 Masterwork. All rights reserved | Designed by</p>
-            <a href="#">W3Layouts</a>
-          </div>
-          <div class="col-sm-12 col-md-5">
-            <div class="colume2 text-right">
-              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
-            </div>
+    </div>
+    <div class="container colume">
+      <div class="row">
+        <div class="col-sm-12 colume1 col-md-7">
+          <p>&copy 2020 Masterwork. All rights reserved | Designed by</p>
+          <a href="#">W3Layouts</a>
+        </div>
+        <div class="col-sm-12 col-md-5">
+          <div class="colume2 text-right">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
       </div>
-    </footer>
-  
-  
-    <!-- back top top -->
-    <a href="#" class="cd-top text-replace js-cd-top">Top</a>
-    <script src="./../back-to-top-master/assets/js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
-    <script src="./../back-to-top-master/assets/js/main.js"></script>
+    </div>
+  </footer>
+
+
+  <!-- back top top -->
+  <a href="#" class="cd-top text-replace js-cd-top">Top</a>
+  <script src="./../back-to-top-master/assets/js/util.js"></script>
+  <!-- util functions included in the CodyHouse framework -->
+  <script src="./../back-to-top-master/assets/js/main.js"></script>
 
   <!-- SLICK -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
