--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 Winning">
               <div class="about__text">
                 <h4>Winning Awards</h4>
                 <p class="counter">890</p>
@@ -211,7 +211,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 Completed">
               <div class="about__text">
                 <h4>Completed Projects</h4>
                 <p class="counter">5345</p>
@@ -309,7 +309,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mt-5">
+            <div class="col-lg-4 col-md-6 mt-5 Corporate">
               <div class="solutions__item">
                 <a href="#">
                   <img src="./images/home/b3.jpg" alt="b1" />
