--- a/HTML/LandingPage.html
+++ b/HTML/LandingPage.html
@@ -74,12 +74,11 @@
                 Blocks
               </a>
               <ul class="nav-item dropdown-menu">
-                <li><a class="nav-link dropdown-item" href="./Blogpost.html">News</a></li>
-                <li><a class="nav-link dropdown-item" href="./BlogSinger.html">Faq</a></li>
-                <li><a class="nav-link dropdown-item" href="./LandingPage.html">Stats</a></li>
-                <li><a class="nav-link dropdown-item" href="./LandingPage.html">Projects</a></li>
-
-                <li><a class="nav-link dropdown-item" href="./LandingPage.html">Testimonials</a></li>
+                <li><a class="nav-link dropdown-item" href="#WE">News</a></li>
+                <li><a class="nav-link dropdown-item" href="#FAQs">Faq</a></li>
+                <li><a class="nav-link dropdown-item" href="#10458">Stats</a></li>
+                <li><a class="nav-link dropdown-item" href="#Project">Projects</a></li>
+                <li><a class="nav-link dropdown-item" href="#TESTIMONIALS">Testimonials</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -343,7 +342,7 @@
     </main>
   </section>
 
-  <section class="solutions py-5">
+  <section class="solutions py-5" id="WE">
     <header class="text-center">
       <div class="container py-md-3">
         <div class="section__header mx-auto">
@@ -440,7 +439,7 @@
     </main>
   </section>
 
-  <section class="FAQs py-5">
+  <section class="FAQs py-5" id="FAQs">
     <header class="text-center py-5">
       <div class="container">
         <div class="section__header mx-auto">
@@ -588,7 +587,7 @@
         </div>
       </div>
     </main>
-    <main class="bottom">
+    <main class="bottom" id="10458">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-sm-6">
@@ -643,7 +642,7 @@
         </div>
       </div>
     </section>
-    <section class="project py-5">
+    <section id="Project" class="project py-5">
       <header class="text-center py-5">
         <div class="container">
           <div class="section__header mx-auto">
@@ -736,7 +735,7 @@
         </div>
       </main>
     </section>
-    <section class="testimonials py-5">
+    <section id="TESTIMONIALS" class="testimonials py-5">
       <header class="text-center py-5">
         <div class="container">
           <div class="section__header mx-auto">
