--- a/HTML/Blogpost.html
+++ b/HTML/Blogpost.html
@@ -278,7 +278,7 @@
               </a>
               <div class="solutions__content">
                 <div class="solutions__content--text">
-                  <label class="industry">Industry</label>
+                  <label class="business">Business</label>
                   <h4>Corporate, Business & Digital Agency</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -303,7 +303,7 @@
               </a>
               <div class="solutions__content">
                 <div class="solutions__content--text">
-                  <label class="industry">Industry</label>
+                  <label class="design">Design</label>
                   <h4>Corporate, Business & Digital Agency</h4>
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing
