--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
   <!-- owl carousel-->
-  <link rel="stylesheet" href="./CSS/owlCarousel.css"/>
+  <link rel="stylesheet" href="./CSS/owlCarousel.css" />
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-
 
   <!-- ANIMATE CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -580,6 +579,97 @@
         </div>
       </main>
     </section>
+    <section class="accordion" id="project">
+      <div class="container">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="projectheadingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectcollapseOne"
+              aria-expanded="true" aria-controls="projectcollapseOne">
+              Project One
+            </button>
+          </h2>
+          <div id="projectcollapseOne" class="accordion-collapse collapse" aria-labelledby="projectheadingOne"
+            data-bs-parent="#projectaccordionExample">
+            <div class="accordion-body">
+              <div class="row project__content">
+                <div class="col-md-6">
+                  <h3>Why a visual identity system is more memorable</h3>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptatum beatae doloremque quam, aliquid accusamus
+                    expedita. Aperiam dolore perspiciatis voluptatum quos libero
+                    ipsam pariatur repellendus qui laudantium! Autem hic
+                    officiis accusamus.
+                  </p>
+                  <button class="btn__demo">Know more</button>
+                </div>
+                <div class="col-md-6">
+                  <img src="./images/home/b4.jpg" alt="b4" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="projectheadingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#projectcollapseTwo" aria-expanded="false" aria-controls="projectcollapseTwo">
+              Project Two
+            </button>
+          </h2>
+          <div id="projectcollapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <div class="row project__content">
+                <div class="col-md-6">
+                  <img src="./images/home/b5.jpg" alt="b5" />
+                </div>
+                <div class="col-md-6">
+                  <h3>Make website that looks Lorem, ipsum dolor.</h3>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptatum beatae doloremque quam, aliquid accusamus
+                    expedita. Aperiam dolore perspiciatis voluptatum quos libero
+                    ipsam pariatur repellendus qui laudantium! Autem hic
+                    officiis accusamus.
+                  </p>
+                  <button class="btn__demo">Know more</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="projectheadingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#projectcollapseThree" aria-expanded="false" aria-controls="projectcollapseThree">
+              Project Three
+            </button>
+          </h2>
+          <div id="projectcollapseThree" class="accordion-collapse collapse" aria-labelledby="projectheadingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <div class="row project__content">
+                <div class="col-md-6">
+                  <h3>Why a visual identity system is more memorable</h3>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptatum beatae doloremque quam, aliquid accusamus
+                    expedita. Aperiam dolore perspiciatis voluptatum quos libero
+                    ipsam pariatur repellendus qui laudantium! Autem hic
+                    officiis accusamus.
+                  </p>
+                  <button class="btn__demo">Know more</button>
+                </div>
+                <div class="col-md-6">
+                  <img src="./images/home/b6.jpg" alt="b6" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="testimonials py-5">
       <header class="text-center py-5">
         <div class="container">
@@ -596,15 +686,19 @@
       </header>
       <main>
         <div class="container">
-          <div class="owl-carousel owl-theme owl-loaded owl-drag ">
+          <div class="owl-carousel owl-theme owl-loaded owl-drag">
             <div class="testimonials-item">
-              <div class="testimonials-item__content ">
-                <div class="testimonials-item__image ">
-                  <img src="./images/home/team3.jpg" alt="team3">
+              <div class="testimonials-item__content">
+                <div class="testimonials-item__image">
+                  <img src="./images/home/team3.jpg" alt="team3" />
                 </div>
-                <div class="testimonials-item__text ">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, laborum? Repellendus pariatur eius
-                    nesciunt cumque ratione quam assumenda molestiae voluptas eligendi exercitationem sapiente</p>
+                <div class="testimonials-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                    ratione quam assumenda molestiae voluptas eligendi
+                    exercitationem sapiente
+                  </p>
                   <i class="fa-solid fa-quote-left"></i>
                   <div class="testimonials-item__author">
                     <h4>Isabella Mia</h4>
@@ -614,13 +708,17 @@
               </div>
             </div>
             <div class="testimonials-item">
-              <div class="testimonials-item__content ">
-                <div class="testimonials-item__image ">
-                  <img src="./images/home/team4.jpg" alt="team3">
+              <div class="testimonials-item__content">
+                <div class="testimonials-item__image">
+                  <img src="./images/home/team4.jpg" alt="team3" />
                 </div>
-                <div class="testimonials-item__text ">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, laborum? Repellendus pariatur eius
-                    nesciunt cumque ratione quam assumenda molestiae voluptas eligendi exercitationem sapiente</p>
+                <div class="testimonials-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                    ratione quam assumenda molestiae voluptas eligendi
+                    exercitationem sapiente
+                  </p>
                   <i class="fa-solid fa-quote-left"></i>
                   <div class="testimonials-item__author">
                     <h4>Isabella Mia</h4>
@@ -630,13 +728,17 @@
               </div>
             </div>
             <div class="testimonials-item">
-              <div class="testimonials-item__content ">
-                <div class="testimonials-item__image ">
-                  <img src="./images/home/team5.jpg" alt="team3">
+              <div class="testimonials-item__content">
+                <div class="testimonials-item__image">
+                  <img src="./images/home/team5.jpg" alt="team3" />
                 </div>
-                <div class="testimonials-item__text ">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, laborum? Repellendus pariatur eius
-                    nesciunt cumque ratione quam assumenda molestiae voluptas eligendi exercitationem sapiente</p>
+                <div class="testimonials-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                    ratione quam assumenda molestiae voluptas eligendi
+                    exercitationem sapiente
+                  </p>
                   <i class="fa-solid fa-quote-left"></i>
                   <div class="testimonials-item__author">
                     <h4>Isabella Mia</h4>
@@ -646,13 +748,17 @@
               </div>
             </div>
             <div class="testimonials-item">
-              <div class="testimonials-item__content ">
-                <div class="testimonials-item__image ">
-                  <img src="./images/home/team6.jpg" alt="team3">
+              <div class="testimonials-item__content">
+                <div class="testimonials-item__image">
+                  <img src="./images/home/team6.jpg" alt="team3" />
                 </div>
-                <div class="testimonials-item__text ">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, laborum? Repellendus pariatur eius
-                    nesciunt cumque ratione quam assumenda molestiae voluptas eligendi exercitationem sapiente</p>
+                <div class="testimonials-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                    ratione quam assumenda molestiae voluptas eligendi
+                    exercitationem sapiente
+                  </p>
                   <i class="fa-solid fa-quote-left"></i>
                   <div class="testimonials-item__author">
                     <h4>Isabella Mia</h4>
@@ -661,7 +767,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </main>
@@ -689,7 +794,7 @@
   </main>
   <!-- footer -->
   <footer class="bg-light">
-    <div class="container ">
+    <div class="container">
       <div class="row">
         <div class="col-md-2 col-sm-12 colume">
           <h5>Company</h5>
@@ -788,7 +893,7 @@
 
   <script>
     $(".counter").countUp();
-    $('.owl-carousel').owlCarousel({
+    $(".owl-carousel").owlCarousel({
       loop: true,
       margin: 10,
       responsiveClass: true,
@@ -799,14 +904,14 @@
         },
         600: {
           items: 1,
-          nav: true
+          nav: true,
         },
         1000: {
           items: 2,
           nav: true,
-        }
-      }
-    })
+        },
+      },
+    });
   </script>
   <script src="./JS/home/sticky.js"></script>
   <script src="./JS/home/home.js"></script>
