--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 Winning">
               <div class="about__text">
                 <h4>Winning Awards</h4>
                 <p class="counter">890</p>
@@ -210,7 +210,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6 Completed">
               <div class="about__text">
                 <h4>Completed Projects</h4>
                 <p class="counter">5345</p>
@@ -308,7 +308,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mt-5">
+            <div class="col-lg-4 col-md-6 mt-5 Corporate">
               <div class="solutions__item">
                 <a href="#">
                   <img src="./images/home/b3.jpg" alt="b1" />
@@ -583,8 +583,8 @@
       <div class="container">
         <div class="accordion-item">
           <h2 class="accordion-header" id="projectheadingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectcollapseOne"
-              aria-expanded="true" aria-controls="projectcollapseOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+              data-bs-target="#projectcollapseOne" aria-expanded="true" aria-controls="projectcollapseOne">
               Project One
             </button>
           </h2>
@@ -684,93 +684,123 @@
           </div>
         </div>
       </header>
-      <main>
-        <div class="container">
-          <div class="owl-carousel owl-theme owl-loaded owl-drag">
-            <div class="testimonials-item">
-              <div class="testimonials-item__content">
-                <div class="testimonials-item__image">
-                  <img src="./images/home/team3.jpg" alt="team3" />
-                </div>
-                <div class="testimonials-item__text">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
-                    ratione quam assumenda molestiae voluptas eligendi
-                    exercitationem sapiente
-                  </p>
-                  <i class="fa-solid fa-quote-left"></i>
-                  <div class="testimonials-item__author">
-                    <h4>Isabella Mia</h4>
-                    <p>Company name</p>
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+            class="active btn-hover" aria-current="true" aria-label="Slide 1"></button>
+          <button class="btn-hover" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container text-center">
+              <div class="row row-cols-2">
+                <div class="col">
+
+                  <div class="testimonials-item">
+                    <div class="testimonials-item__content">
+                      <div class="testimonials-item__image">
+                        <img src="./images/home/team3.jpg" alt="team3" />
+                      </div>
+                      <div class="testimonials-item__text">
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                          Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                          ratione quam assumenda molestiae voluptas eligendi
+                          exercitationem sapiente
+                        </p>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="testimonials-item__author">
+                          <h4>Isabella Mia</h4>
+                          <p>Company name</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
+
+                </div>
+                <div class="col">
+
+                  <div class="testimonials-item">
+                    <div class="testimonials-item__content">
+                      <div class="testimonials-item__image">
+                        <img src="./images/home/team4.jpg" alt="team3" />
+                      </div>
+                      <div class="testimonials-item__text">
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                          Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                          ratione quam assumenda molestiae voluptas eligendi
+                          exercitationem sapiente
+                        </p>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="testimonials-item__author">
+                          <h4>Isabella Mia</h4>
+                          <p>Company name</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
-            <div class="testimonials-item">
-              <div class="testimonials-item__content">
-                <div class="testimonials-item__image">
-                  <img src="./images/home/team4.jpg" alt="team3" />
-                </div>
-                <div class="testimonials-item__text">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
-                    ratione quam assumenda molestiae voluptas eligendi
-                    exercitationem sapiente
-                  </p>
-                  <i class="fa-solid fa-quote-left"></i>
-                  <div class="testimonials-item__author">
-                    <h4>Isabella Mia</h4>
-                    <p>Company name</p>
+          </div>
+          <div class="carousel-item ">
+            <div class="row row-cols-2 row-content">
+              <div class="col content2">
+                <div class="testimonials-item ">
+                  <div class="testimonials-item__content">
+                    <div class="testimonials-item__image">
+                      <img src="./images/home/team5.jpg" alt="team3" />
+                    </div>
+                    <div class="testimonials-item__text">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                        ratione quam assumenda molestiae voluptas eligendi
+                        exercitationem sapiente
+                      </p>
+                      <i class="fa-solid fa-quote-left"></i>
+                      <div class="testimonials-item__author">
+                        <h4>Isabella Mia</h4>
+                        <p>Company name</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="testimonials-item">
-              <div class="testimonials-item__content">
-                <div class="testimonials-item__image">
-                  <img src="./images/home/team5.jpg" alt="team3" />
-                </div>
-                <div class="testimonials-item__text">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
-                    ratione quam assumenda molestiae voluptas eligendi
-                    exercitationem sapiente
-                  </p>
-                  <i class="fa-solid fa-quote-left"></i>
-                  <div class="testimonials-item__author">
-                    <h4>Isabella Mia</h4>
-                    <p>Company name</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="testimonials-item">
-              <div class="testimonials-item__content">
-                <div class="testimonials-item__image">
-                  <img src="./images/home/team6.jpg" alt="team3" />
-                </div>
-                <div class="testimonials-item__text">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Illo, laborum? Repellendus pariatur eius nesciunt cumque
-                    ratione quam assumenda molestiae voluptas eligendi
-                    exercitationem sapiente
-                  </p>
-                  <i class="fa-solid fa-quote-left"></i>
-                  <div class="testimonials-item__author">
-                    <h4>Isabella Mia</h4>
-                    <p>Company name</p>
+              <div class="col content2 row-content">
+                <div class="testimonials-item ">
+                  <div class="testimonials-item__content ">
+                    <div class="testimonials-item__image">
+                      <img src="./images/home/team6.jpg" alt="team3" />
+                    </div>
+                    <div class="testimonials-item__text">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Illo, laborum? Repellendus pariatur eius nesciunt cumque
+                        ratione quam assumenda molestiae voluptas eligendi
+                        exercitationem sapiente
+                      </p>
+                      <i class="fa-solid fa-quote-left"></i>
+                      <div class="testimonials-item__author">
+                        <h4>Isabella Mia</h4>
+                        <p>Company name</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </main>
+      </div>
+
+
     </section>
+
     <section class="ready">
       <header class="text-center py-5">
         <div class="container">
