--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <div class="carousel-item active">
             <div class="container text-center">
               <div class="row row-cols-2">
-                <div class="col">
+                <div class="col col-slider">
 
                   <div class="testimonials-item">
                     <div class="testimonials-item__content">
@@ -720,7 +720,7 @@
                   </div>
 
                 </div>
-                <div class="col">
+                <div class="col col-slider">
 
                   <div class="testimonials-item">
                     <div class="testimonials-item__content">
