--- a/HTML/BlogSinger.html
+++ b/HTML/BlogSinger.html
@@ -66,7 +66,7 @@
               <a class="nav-link " href="./Services.html">Services</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Pages
               </a>
@@ -77,7 +77,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./Contact.html">Contact</a>
+              <a class="nav-link " href="./Contact.html">Contact</a>
             </li>
             <li class="nav-item">
               <a href="#" class="btn__demo">Schedule a Demo</a>
